--- a/demo/src/posts/2019/03/a-pinned-post.mdx
+++ b/demo/src/posts/2019/03/a-pinned-post.mdx
@@ -7,3 +7,8 @@ date: 2019-03-05
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+- [/posts/post-1/](/posts/post-1/)
+- [/posts/2020/02/post-5/](/posts/2020/02/post-5/)
+- [https://example.com](https://example.com)
+- [http://example.com](http://example.com)
