feat: upgrade Gatsby gatsby-plugin-image

--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -64,7 +64,7 @@ Here we use it to return all the `posts` by using the filter prop
                     minHeight: '1px',
                   }}
                 >
-                  {featuredImage && featuredImage.childImageSharp && (
+                  {/* {featuredImage && featuredImage.childImageSharp && (
                     <Box sx={{ minHeight: '1px' }}>
                       <Img
                         fluid={featuredImage.childImageSharp.fluid}
@@ -79,7 +79,7 @@ Here we use it to return all the `posts` by using the filter prop
                         alt={featuredImageUrlSharp.childImageSharp.fluid.originalName}
                       />
                     </Box>
-                  )}
+                  )} */}
                   <Box
                     sx={{
                       display: 'flex',
