feat: enable GatsbyImage on remote embedded images

--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -10,13 +10,12 @@ url: https://example.com
 misc: Ahoy
 pinned: false
 featuredImage: 1x1.jpg
-featuredImageUrl: ''
+featuredImageUrl: https://res.cloudinary.com/www-paulie-dev/image/upload/v1603273280/paulie.dev/placeholder_ekfnq2.jpg
 embeddedImages:
   - 1x1.jpg
   - 1x1.jpg
 embeddedImageUrls:
-  - ''
-  - ''
+  - https://res.cloudinary.com/www-paulie-dev/image/upload/v1603273280/paulie.dev/placeholder_ekfnq2.jpg
 ---
 
 This is a dummy hidden post containing required frontmatter. It's filtered out but matching the title useAllMdx => don/'t remove it
