--- a/demo/src/posts/2021/local-image-post.mdx
+++ b/demo/src/posts/2021/local-image-post.mdx
@@ -1,8 +1,8 @@
 ---
-title: Post 0
+title: Local Image Post
+date: 2021-01-14
 tags: ["React", "GatsbyJs", "ES6", "Css"]
 featuredImage: pankaj-patel-SXihyA4oEJs-unsplash.jpg
-date: 2018-11-23
 embeddedImages:
   - pankaj-patel-SXihyA4oEJs-unsplash.jpg
 ---
