--- a/demo/src/test/test.mdx
+++ b/demo/src/test/test.mdx
@@ -1,13 +1,22 @@
 ---
-title: Remote Image Post
+title: Test
 date: 2021-01-13
 author: Paul Scanlon
 tags: ["JavaScript", "React", "GatsbyJs", "HTML", "CSS", "theme-ui"]
 featuredImageUrl: https://res.cloudinary.com/www-paulie-dev/image/upload/v1603273280/paulie.dev/placeholder_ekfnq2.jpg
 embeddedImageUrls:
   - https://res.cloudinary.com/www-paulie-dev/image/upload/v1603273280/paulie.dev/placeholder_ekfnq2.jpg
+  - https://res.cloudinary.com/www-paulie-dev/image/upload/v1603273280/paulie.dev/placeholder_ekfnq2.jpg
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis. Donec non tellus justo. Ut sit amet elit mauris. Praesent eleifend cursus luctus. Praesent posuere rhoncus maximus. Donec nec felis nec metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
 
+## Image 1
+
 <GatsbyImage alt="" image={props.embedded.image1} />
+<pre>{JSON.stringify(props.embedded.image1, null, 2)}</pre>
+
+## Image 2
+
+<EmbeddedImage alt="" image={props.embedded.image2} />
+<pre>{JSON.stringify(props.embedded.image2, null, 2)}</pre>
