chore: remove allMdx

--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -18,4 +18,4 @@ embeddedImageUrls:
   - https://res.cloudinary.com/www-paulie-dev/image/upload/v1603273280/paulie.dev/placeholder_ekfnq2.jpg
 ---
 
-This is a dummy hidden post containing required frontmatter. It's filtered out but matching the title useAllMdx => don/'t remove it
+This is a dummy hidden post containing required frontmatter. It's filtered out but matching the title useSource => don/'t remove it
