fix scrollTo position on route change

--- a/demo/src/posts/post-1.mdx
+++ b/demo/src/posts/post-1.mdx
@@ -50,7 +50,7 @@ npm install aThing `aThing` 'aThing' "aThing"
 </Flex>
 
 
-### Gatsby
+### [Gatsby](#gatsby)
 
 `<GatsbyImage alt='...' image={...}/>`
 
